Added latest papers

--- a/cv.tex
+++ b/cv.tex
@@ -420,28 +420,32 @@
    %\multicolumn{2}{l}{
       \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} \\
    %}
-   \textbf{EBL}, N.\,Colonna, R.\,De Gennaro, N.\,L.\,Nguyen, G.\,Borghi, A.\,Ferretti, I.\,Dabo, and N.\,Marzari, \href{https://arxiv.org/abs/2302.07759}{\textit{koopmans: an open-source package for accurately and efficiently predicting spectral properties with Koopmans functionals}}. arXiv:2302.07759 (2023)
+   \footnotesize A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2307.16003}{\textit{The tilted-plane structure of the energy of open quantum systems}}. arXiv:2307.16003 (2023)
    \\
-   Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://doi.org/10.1063/5.0138610}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. J. Chem. Phys. 158 (2023) 144113
+   \footnotesize F.\,Haddadi, \textbf{EBL}, I.\,Timrov, N.\,Marzari, and M.\,Gibertini, \href{https://arxiv.org/abs/2306.06286}{\textit{On-site and inter-site Hubbard corrections in magnetic monolayers: The case of FePS\textsubscript{3} and CrI\textsubscript{3}}}. arXiv:2306.06286 (2023)
    \\
-   A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://doi.org/10.1103/PhysRevB.107.L121115}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. 107 (2023) L121115
+   \footnotesize \textbf{EBL}, N.\,Colonna, R.\,De Gennaro, N.\,L.\,Nguyen, G.\,Borghi, A.\,Ferretti, I.\,Dabo, and N.\,Marzari, \href{https://arxiv.org/abs/2302.07759}{\textit{koopmans: an open-source package for accurately and efficiently predicting spectral properties with Koopmans functionals}}. J.\ Chem.\  Theory Comput.\ \emph{accepted} (2023)
    \\
-   G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
-   N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022) 5435                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\ %&                                                 \\
-   R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022) 035106                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ % & 1 citation                                      \\
+   \footnotesize Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://doi.org/10.1063/5.0138610}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. J. Chem. Phys. 158 (2023) 144113
+   \\
+   \footnotesize A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://doi.org/10.1103/PhysRevB.107.L121115}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. 107 (2023) L121115
+   \\
+   \footnotesize G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
+   \footnotesize N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022) 5435                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\ %&                                                 \\
+   \footnotesize R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022) 035106                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ % & 1 citation                                      \\
    % 
-   H.\,Lee, C.\,Weber, and \textbf{EBL}, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022) 4419                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
+   \footnotesize H.\,Lee, C.\,Weber, and \textbf{EBL}, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022) 4419                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
    % 
    % 
-   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, \textbf{EBL}, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021) 3163                                                                                                                                                                                                                                                                                                                                                                  \\ %& 8 citations                                     \\
+   \footnotesize R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, \textbf{EBL}, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021) 3163                                                                                                                                                                                                                                                                                                                                                                  \\ %& 8 citations                                     \\
    % 
-   \textbf{EBL}, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020) 4899                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \\ %& 5 citations                                     \\
-   S.\,M.\ Masur, \textbf{EBL}, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 3 citations                                     \\
-   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, \textbf{EBL}, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 \\ %& 73 citations                                    \\
-   M.\,A.\,al-Badri, \textbf{EBL}, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ %& 7 citations                                     \\
-   C.\,J.\,Edgcombe, S.\,M.\,Masur, \textbf{EBL}, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 14 citations                                    \\
-   \textbf{EBL}, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \\ %& 33 citations                                    \\
-   \textbf{EBL} and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ % & 9 citations; selected as an Editors' Suggestion
+   \footnotesize \textbf{EBL}, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020) 4899                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \\ %& 5 citations                                     \\
+   \footnotesize S.\,M.\ Masur, \textbf{EBL}, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 3 citations                                     \\
+   \footnotesize J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, \textbf{EBL}, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 \\ %& 73 citations                                    \\
+   \footnotesize M.\,A.\,al-Badri, \textbf{EBL}, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ %& 7 citations                                     \\
+   \footnotesize C.\,J.\,Edgcombe, S.\,M.\,Masur, \textbf{EBL}, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 14 citations                                    \\
+   \footnotesize \textbf{EBL}, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \\ %& 33 citations                                    \\
+   \footnotesize \textbf{EBL} and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ % & 9 citations; selected as an Editors' Suggestion
 \end{tabularx}
 
 \end{document}
