Updated status of two papers

--- a/cv.tex
+++ b/cv.tex
@@ -436,8 +436,9 @@
    %\multicolumn{2}{l}{
       \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} \\
    %}
-   \footnotesize A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2309.17443}{\textit{The convexity condition of density-functional theory}}. arXiv:2309.17443 (2023)
+   \footnotesize A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2309.17443}{\textit{The convexity condition of density-functional theory}}. J.\ Chem.\ Phys.\ \emph{accepted} arXiv:2309.17443 (2023)
    \\
+   \footnotesize G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. Phys.\ Rev.\ Mater.\ \emph{accepted} arXiv:2201.04213 (2023) \\
    \footnotesize A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2307.16003}{\textit{The tilted-plane structure of the energy of open quantum systems}}. arXiv:2307.16003 (2023)
    \\
    \footnotesize F.\,Haddadi, \textbf{EBL}, I.\,Timrov, N.\,Marzari, and M.\,Gibertini, \href{https://arxiv.org/abs/2306.06286}{\textit{On-site and inter-site Hubbard corrections in magnetic monolayers: The case of FePS\textsubscript{3} and CrI\textsubscript{3}}}. arXiv:2306.06286 (2023)
@@ -448,7 +449,6 @@
    \\
    \footnotesize A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://doi.org/10.1103/PhysRevB.107.L121115}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. 107 (2023) L121115
    \\
-   \footnotesize G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
    \footnotesize N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022) 5435                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\ %&                                                 \\
    \footnotesize R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022) 035106                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ % & 1 citation                                      \\
    % 
